--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -15,17 +15,17 @@
            Gestion des commandes
         </a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="" routerlinkactive="active">
           <i class="far fa-calendar-alt"></i> Gestion des abonnements
         </a>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a class="nav-link" href="#" routerlinkactive="active">
           <i class="fas fa-address-card"></i>
           Gestion des clients
         </a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" href="#" routerlinkactive="active">
           <i class="far fa-id-badge"></i> Gestion des utilisateurs
