--- a/src/app/pages/gestion-commandes/rendez-vous/rendez-vous.component.html
+++ b/src/app/pages/gestion-commandes/rendez-vous/rendez-vous.component.html
@@ -96,9 +96,9 @@ height: calc(100vh - 190px);
               <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
                 <td mat-cell *matCellDef="let row" [style.color]="row.color"> 
-                  <button class="btn btn-sm btn-primary"><i class="fa fa-edit"></i></button>
-                  <button class="btn  btn-sm btn-success"><i class="fa fa-list-alt"></i></button> 
-                  <button class="btn  btn-sm btn-warning"><i class="fa fa-user"></i></button> </td>
+                  <button  title="Modifier" class="btn btn-sm btn-primary"><i class="fa fa-edit"></i></button>
+                  <button  title="Détails" class="btn  btn-sm btn-success"><i class="fa fa-list-alt"></i></button> 
+                  <button  title="Tache à effectuer" class="btn  btn-sm btn-warning"><i class="fa fa-user"></i></button> </td>
             
                 </ng-container>
           
