--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
             <div class="media align-items-center">
             
               <div class="media-body mr-2 d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold">Cisse Abdoulaye Toumoutou</span>
+                <span class="mb-0 text-sm  font-weight-bold">Toumoutou</span>
               </div>
               <span class="avatar avatar-sm rounded-circle">
                 <img src="assets/img/theme/team-4-800x800.jpg" alt="pseudo">
