--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="col-xl-6">
-        <ul class="nav nav-footer justify-content-center justify-content-xl-end">
+        <!-- <ul class="nav nav-footer justify-content-center justify-content-xl-end">
           <li class="nav-item">
             <a href="https://www.creative-tim.com?ref=ada-footer-auth-layout" class="nav-link" target="_blank">Creative Tim</a>
           </li>
@@ -79,7 +79,7 @@
           <li class="nav-item">
             <a href="https://github.com/creativetimofficial/argon-dashboard-angular/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
   </div>
