--- a/docs/argon.css
+++ b/docs/argon.css
@@ -8031,7 +8031,7 @@ button.bg-dark:focus
 
 .bg-default
 {
-    background-color: #172b4d !important;
+    background-color:#125d9f !important;
 }
 
 a.bg-default:hover,
