--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,3 +80,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     bottom: -28px !important;
 }
 
+.bg-color {
+    background-color: #2b8e88};
+
+    .navbar .container {
+       
+        justify-content: center !important;
+    }
+    .fill-default {
+        fill: #125d9f !important !important;
+    }
